--- a/wallpaper-app/package.json
+++ b/wallpaper-app/package.json
@@ -14,6 +14,8 @@
     "@react-native-seoul/masonry-list": "^1.4.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@sanity/client": "^5.3.0",
+    "@sanity/image-url": "^1.0.2",
     "expo": "~48.0.6",
     "expo-blur": "^12.2.2",
     "expo-status-bar": "~1.4.4",
@@ -22,6 +24,7 @@
     "react-native": "0.71.3",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
