--- a/wallpaper-app/package.json
+++ b/wallpaper-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-seoul/masonry-list": "^1.4.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -18,13 +19,20 @@
     "@sanity/image-url": "^1.0.2",
     "expo": "~48.0.6",
     "expo-blur": "^12.2.2",
+    "expo-file-system": "^15.2.2",
+    "expo-location": "^15.1.1",
+    "expo-media-library": "^15.2.3",
+    "expo-permissions": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
+    "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-url-polyfill": "^1.3.0",
+    "react-native-view-shot": "^3.5.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
